--- a/frontend/src/styles/components/common/_shared_input.scss
+++ b/frontend/src/styles/components/common/_shared_input.scss
@@ -10,3 +10,11 @@
         }
     }
 }
+
+.contact-page {
+    .input {
+        &-feedback {
+            @extend %contact_input-feedback;
+        }
+    } 
+}
