--- a/frontend/src/styles/utils/_lists.scss
+++ b/frontend/src/styles/utils/_lists.scss
@@ -87,5 +87,9 @@ $text-list: (
     "contact_text-card-contact-name" "Inter" bold normal "neutral-100" normal 16px 24px,
     "contact_text-card-contact-description" "Inter" regular normal "neutral-60" normal 14px 16px,
     "contact_text-card-contact-info" "Inter" medium normal "neutral-100" normal 14px 16px,
+    "contact_text-feedback-form-title" "Inter" semi-bold normal "neutral-100" normal 18px 36px,
+    "contact_text-feedback-form-description" "Inter" medium normal "neutral-60" normal 14px 18px,
+    "contact_label-feedback-form" "Inter" medium normal "neutral-100" normal 14px 14px,
+    "contact_input-textarea-feedback" "Inter" regular normal "neutral-100" normal 14px 16px,
 );
 
